# MultiTouch

./: .all-contributorsrc  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  doxygen-config
gesturelibrary/: .clang-format  CMakeLists.txt  README.md
gesturelibrary/include/: double.h  drag.h  gesturelib.h  gestureparams.h  gestures.h  hold.h  hold_and_drag.h  ktap.h  multidrag.h  multistroke.h  recognizer.h  repeat_tap.h  rotate.h  single.h  stroke.h  swipe.h  tap.h  triple.h  utils.h  zoom.h  zoom_and_rotate.h
gesturelibrary/include/double/: twoFingerDouble.h  twoFingerDrag.h  twoFingerHold.h  twoFingerZoom.h  twoRecog.h
gesturelibrary/include/single/: singleFingerDouble.h  singleFingerDrag.h  singleFingerHold.h  singleFingerSwipe.h  singleFingerTap.h  singleFingerTriple.h  singleRecog.h
gesturelibrary/src/: double.c  drag.c  gesturelib.c  gestureparams.c  gestures.c  hold.c  hold_and_drag.c  ktap.c  multidrag.c  multistroke.c  repeat_tap.c  rotate.c  stroke.c  swipe.c  tap.c  zoom.c  zoom_and_rotate.c
gesturelibrary/src/double/: double.c  twoFingerDouble.c  twoFingerDrag.c  twoFingerHold.c  twoFingerPinch.c  twoFingerRotate.c  twoFingerSwipe.c  twoFingerTap.c  twoFingerZoom.c
gesturelibrary/src/single/: single.c  singleFingerDouble.c  singleFingerDrag.c  singleFingerHold.c  singleFingerSwipe.c  singleFingerTap.c  singleFingerTriple.c
gesturelibrary/test/: CMakeLists.txt  test.cpp  test_flutter.cpp  test_gesturelib.cpp  test_recognizers.cpp  test_touch_preproc.cpp
gesturelibrary/test/include/: testFlutter.hpp
gesturelibrary/test/res/double/: fail_case.csv  fail_case_2.csv  phone_1.csv  phone_10.csv  phone_2.csv  phone_3.csv  phone_4.csv  phone_5.csv  phone_6.csv  phone_7.csv  phone_8.csv  phone_9.csv
gesturelibrary/test/res/double_tap/: phone_1.csv  phone_2.csv  phone_3.csv
gesturelibrary/test/res/drag/: laptop_1.csv  phone_1.csv  phone_10.csv  phone_11.csv  phone_12.csv  phone_13.csv  phone_14.csv  phone_15.csv  phone_16.csv  phone_17.csv  phone_18.csv  phone_19.csv  phone_2.csv  phone_20.csv  phone_21.csv  phone_22.csv  phone_23.csv  phone_24.csv  phone_25.csv  phone_26.csv  phone_27.csv  phone_3.csv  phone_4.csv  phone_5.csv  phone_6.csv  phone_7.csv  phone_8.csv  phone_9.csv
gesturelibrary/test/res/hold/: phone_1.csv  phone_2.csv  phone_3.csv  phone_4.csv  phone_5.csv  (+2 more)
gesturelibrary/test/src/: testDouble.cpp  testDrag.cpp  testHold.cpp  testHoldAndDrag.cpp  testMultidrag.cpp  testMultistroke.cpp  testRotate.cpp  testStroke.cpp  testSwipe.cpp  testTap.cpp  testZoom.cpp  testZoomAndRotate.cpp  test_flutter.cpp  test_gesturelib.cpp  test_touch_preproc.cpp
(+116 files in other folders)
